--- a/MeetGroups/app/src/main/res/layout/fragment_journal.xml
+++ b/MeetGroups/app/src/main/res/layout/fragment_journal.xml
@@ -7,101 +7,110 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".view.navbar.journal.JournalFragment">
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
-    <Toolbar
-        android:id="@+id/toolbar_journal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <RelativeLayout
-            android:id="@+id/rl_journal"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-            <androidx.cardview.widget.CardView
-                android:id="@+id/roundImageView"
-                android:layout_width="60dp"
-                android:layout_height="60dp"
-                app:cardBackgroundColor="@color/white"
-                app:cardCornerRadius="250dp"
-                android:layout_marginTop="30dp"
-                android:layout_alignParentStart="true"
-                android:layout_centerInParent="true">
-                <androidx.cardview.widget.CardView
-                    android:layout_width="60dp"
-                    android:layout_height="60dp"
-                    app:cardCornerRadius="60dp">
-                    <ImageView
-                        android:id="@+id/imv_journal_image"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:scaleType="centerCrop"
-                        app:srcCompat="@android:drawable/sym_def_app_icon" />
-                </androidx.cardview.widget.CardView>
-            </androidx.cardview.widget.CardView>
 
-            <TextView
-                android:id="@+id/tv_journal_title"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_centerInParent="true"
-                android:layout_toLeftOf="@id/btn_journal_group"
-                android:layout_toRightOf="@+id/roundImageView"
-                android:gravity="center_vertical"
-                android:paddingHorizontal="10dp"
-                android:text="@string/title_journal"
-                android:textSize="23sp"
-                android:textStyle="bold" />
-
-            <ImageButton
-                android:id="@+id/btn_journal_group"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerInParent="true"
-                android:backgroundTintMode="add"
-                android:src="@drawable/ic_journal_group_24" />
-            <ImageButton
-                android:id="@+id/btn_journal_edit"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@id/btn_journal_group"
-                android:layout_centerInParent="true"
-                android:backgroundTintMode="add"
-                android:src="@drawable/ic_journal_edit_24" />
-
-        </RelativeLayout>
-    </Toolbar>
-
-    <FrameLayout
-        android:id="@+id/child_fragment_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
-    <FrameLayout
-        android:id="@+id/fl_journal"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginBottom="50dp"
-        android:paddingTop="20dp"
-        android:padding="15dp">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rv_journal_postlist"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+        android:orientation="vertical"
+        android:padding="20dp">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/btn_journal_add_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|right"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="25dp"
-            android:clickable="true"
-            android:src="@drawable/outline_add_24" />
-    </FrameLayout>
-</LinearLayout>
+        <Toolbar
+            android:id="@+id/toolbar_journal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <RelativeLayout
+                android:id="@+id/rl_journal"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/roundImageView"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerInParent="true"
+                    android:layout_marginTop="30dp"
+                    app:cardBackgroundColor="@color/white"
+                    app:cardCornerRadius="250dp">
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        app:cardCornerRadius="60dp">
+
+                        <ImageView
+                            android:id="@+id/imv_journal_image"
+                            android:layout_width="60dp"
+                            android:layout_height="60dp"
+                            android:scaleType="centerCrop"
+                            app:srcCompat="@android:drawable/sym_def_app_icon" />
+                    </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>
+
+                <TextView
+                    android:id="@+id/tv_journal_title"
+                    android:layout_width="match_parent"
+                    android:layout_height="80dp"
+                    android:layout_centerInParent="true"
+                    android:layout_toLeftOf="@id/btn_journal_group"
+                    android:layout_toRightOf="@+id/roundImageView"
+                    android:gravity="center_vertical"
+                    android:paddingHorizontal="10dp"
+                    android:text="@string/title_journal"
+                    android:textSize="23sp"
+                    android:textStyle="bold" />
+
+                <ImageButton
+                    android:id="@+id/btn_journal_group"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentRight="true"
+                    android:layout_centerInParent="true"
+                    android:backgroundTintMode="add"
+                    android:src="@drawable/ic_journal_group_24" />
+
+                <ImageButton
+                    android:id="@+id/btn_journal_edit"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_toLeftOf="@id/btn_journal_group"
+                    android:backgroundTintMode="add"
+                    android:src="@drawable/ic_journal_edit_24" />
+
+            </RelativeLayout>
+        </Toolbar>
+
+        <FrameLayout
+            android:id="@+id/child_fragment_container"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <FrameLayout
+            android:id="@+id/fl_journal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="50dp"
+            android:padding="15dp"
+            android:paddingTop="20dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_journal_postlist"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btn_journal_add_post"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|right"
+                android:layout_marginRight="30dp"
+                android:layout_marginBottom="25dp"
+                android:clickable="true"
+                android:src="@drawable/outline_add_24" />
+        </FrameLayout>
+    </LinearLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:layout_width="match_parent"
